--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:id="@+id/navMenuGroup">
+    <group android:id="@+id/navMenuGroup" android:checkableBehavior="single">
 
         <item
             android:id="@+id/nav_home"
@@ -13,9 +13,16 @@
             android:id="@+id/nav_addToCategory"
             android:title="Add to Category" />
 
+
+
+    </group>
+    <group android:checkableBehavior="single">
+
         <item
             android:id="@+id/nav_logout"
             android:title="Logout" />
 
     </group>
+
+
 </menu>
