--- a/app/src/main/res/layout/activity_signup_screen.xml
+++ b/app/src/main/res/layout/activity_signup_screen.xml
@@ -38,8 +38,8 @@
     <EditText
         android:id="@+id/nameUserInput"
         android:layout_width="160dp"
-        android:layout_height="38dp"
-        android:hint="Name"
+        android:layout_height="48dp"
+        android:hint="Email"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,8 +51,8 @@
     <EditText
         android:id="@+id/usernameUserInput"
         android:layout_width="160dp"
-        android:layout_height="38dp"
-        android:hint="Username"
+        android:layout_height="48dp"
+        android:hint="Full Name"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,7 +64,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Username"
+        android:text="Email"
         android:textSize="18dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -103,7 +103,7 @@
     <EditText
         android:id="@+id/passwordUserInput"
         android:layout_width="162dp"
-        android:layout_height="42dp"
+        android:layout_height="48dp"
         android:hint="Password"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -178,5 +178,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.792"></Button>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.976" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
