--- a/app/src/main/res/layout/activity_categories_screen.xml
+++ b/app/src/main/res/layout/activity_categories_screen.xml
@@ -8,6 +8,7 @@
     tools:context=".CategoriesScreen">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,7 +26,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0">
-
 
 
             <ImageView
@@ -50,19 +50,35 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <Button
-        android:id="@+id/addCategoryFromCategoriesScreenBtn"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:backgroundTint="@color/darkGrey"
-        android:text="+"
-        android:textSize="80dp"
-        android:textColor="@color/black"
+    <view
+        class="androidx.appcompat.app.AlertController$RecycleListView"
+        android:layout_width="350dp"
+        android:layout_height="480dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.145"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.197" />
+        app:layout_constraintVertical_bias="0.784">
+
+
+
+    </view>
+
+    <Button
+        android:id="@+id/addCategoryFromCategoriesScreenBtn"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:backgroundTint="@color/darkGrey"
+        android:text="+"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="80dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.096"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.128" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
