--- a/app/src/main/res/layout/activity_add_new_category.xml
+++ b/app/src/main/res/layout/activity_add_new_category.xml
@@ -166,6 +166,22 @@
         app:layout_constraintVertical_bias="0.707" />
 
     <Button
+        android:id="@+id/newaddimage"
+        android:layout_width="133dp"
+        android:layout_height="38dp"
+        android:backgroundTint="@color/darkGrey"
+        android:text="Add Image"
+        android:textColor="@color/black"
+        android:textSize="14dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.097"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.707" />
+
+    <Button
         android:id="@+id/addImageFromDeviceButton"
         android:layout_width="174dp"
         android:layout_height="40dp"
