Adapters and Classes

--- a/app/src/main/res/layout/activity_categories_screen.xml
+++ b/app/src/main/res/layout/activity_categories_screen.xml
@@ -50,21 +50,6 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <view
-        class="androidx.appcompat.app.AlertController$RecycleListView"
-        android:layout_width="350dp"
-        android:layout_height="480dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.784">
-
-
-
-    </view>
-
     <Button
         android:id="@+id/addCategoryFromCategoriesScreenBtn"
         android:layout_width="100dp"
@@ -80,5 +65,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.128" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/my_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        />
+
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
