--- a/app/src/main/res/layout/activity_add_new_category.xml
+++ b/app/src/main/res/layout/activity_add_new_category.xml
@@ -210,4 +210,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.628" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/addToSubmitButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/addImageFromDeviceButton"
+        app:layout_constraintTop_toBottomOf="@+id/categoryDescriptionUserInput"
+        tools:srcCompat="@tools:sample/avatars" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
