--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,6 +12,9 @@
         <item
             android:id="@+id/nav_addToCategory"
             android:title="Add to Category" />
+        <item
+            android:id="@+id/nav_myStats"
+            android:title="View My Stats" />
 
 
 
